--- a/Frontend/src/main/webapp/assets/css/myapp.css
+++ b/Frontend/src/main/webapp/assets/css/myapp.css
@@ -1,397 +1,476 @@
 body {
-	width: 100%;
-	height: 100%;
-	font-family: Lora, "Helvetica Neue", Helvetica, Arial, sans-serif;
-	color: #fff;
-	background-color: #000;
+    width: 100%;
+    height: 100%;
+    font-family: Lora,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    color: #fff;
+    background-color: #000;
 }
 
 html {
-	width: 100%;
-	height: 100%;
+    width: 100%;
+    height: 100%;
 }
 
-h1, h2, h3, h4, h5, h6 {
-	margin: 0 0 35px;
-	text-transform: uppercase;
-	font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
-	font-weight: 700;
-	letter-spacing: 1px;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    margin: 0 0 35px;
+    text-transform: uppercase;
+    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-weight: 700;
+    letter-spacing: 1px;
 }
 
 p {
-	margin: 0 0 25px;
-	font-size: 18px;
-	line-height: 1.5;
+    margin: 0 0 25px;
+    font-size: 18px;
+    line-height: 1.5;
 }
 
-@media ( min-width :767px) {
-	p {
-		margin: 0 0 35px;
-		font-size: 20px;
-		line-height: 1.6;
-	}
+@media(min-width:767px) {
+    p {
+        margin: 0 0 35px;
+        font-size: 20px;
+        line-height: 1.6;
+    }
 }
 
 a {
-	color: #28c3ab;
-	-webkit-transition: all .2s ease-in-out;
-	-moz-transition: all .2s ease-in-out;
-	transition: all .2s ease-in-out;
+    color: #28c3ab;
+    -webkit-transition: all .2s ease-in-out;
+    -moz-transition: all .2s ease-in-out;
+    transition: all .2s ease-in-out;
 }
 
-a:hover, a:focus {
-	text-decoration: none;
-	color: #176e61;
+a:hover,
+a:focus {
+    text-decoration: none;
+    color: #176e61;
 }
 
 .light {
-	font-weight: 400;
+    font-weight: 400;
 }
 
 .navbar {
-	margin-bottom: 0;
-	border-bottom: 1px solid rgba(255, 255, 255, .3);
-	text-transform: uppercase;
-	font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
-	background-color: #000;
+    margin-bottom: 0;
+    border-bottom: 1px solid rgba(255,255,255,.3);
+    text-transform: uppercase;
+    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    background-color: #000;
 }
 
 .navbar-brand {
-	font-weight: 700;
+    font-weight: 700;
 }
 
 .navbar-brand:focus {
-	outline: 0;
+    outline: 0;
 }
 
 .navbar-custom a {
-	color: #fff;
+    color: #fff;
 }
 
 .navbar-custom .nav li a {
-	-webkit-transition: background .3s ease-in-out;
-	-moz-transition: background .3s ease-in-out;
-	transition: background .3s ease-in-out;
+    -webkit-transition: background .3s ease-in-out;
+    -moz-transition: background .3s ease-in-out;
+    transition: background .3s ease-in-out;
 }
 
-.navbar-custom .nav li a:hover, .navbar-custom .nav li a:focus,
-	.navbar-custom .nav li.active {
-	outline: 0;
-	background-color: rgba(255, 255, 255, .2);
+.navbar-custom .nav li a:hover,
+.navbar-custom .nav li a:focus,
+.navbar-custom .nav li.active {
+    outline: 0;
+    background-color: rgba(255,255,255,.2);
 }
 
 .navbar-toggle {
-	padding: 4px 6px;
-	font-size: 16px;
-	color: #fff;
+    padding: 4px 6px;
+    font-size: 16px;
+    color: #fff;
 }
 
-.navbar-toggle:focus, .navbar-toggle:active {
-	outline: 0;
+.navbar-toggle:focus,
+.navbar-toggle:active {
+    outline: 0;
 }
 
-@media ( min-width :767px) {
-	.navbar {
-		padding: 20px 0;
-		border-bottom: 0;
-		letter-spacing: 1px;
-		background: 0 0;
-		-webkit-transition: background .5s ease-in-out, padding .5s ease-in-out;
-		-moz-transition: background .5s ease-in-out, padding .5s ease-in-out;
-		transition: background .5s ease-in-out, padding .5s ease-in-out;
-	}
-	.top-nav-collapse {
-		padding: 0;
-		background-color: #000;
-	}
-	.navbar-custom.top-nav-collapse {
-		border-bottom: 1px solid rgba(255, 255, 255, .3);
-	}
+@media(min-width:767px) {
+    .navbar {
+        padding: 20px 0;
+        border-bottom: 0;
+        letter-spacing: 1px;
+        background: 0 0;
+        -webkit-transition: background .5s ease-in-out,padding .5s ease-in-out;
+        -moz-transition: background .5s ease-in-out,padding .5s ease-in-out;
+        transition: background .5s ease-in-out,padding .5s ease-in-out;
+    }
+
+    .top-nav-collapse {
+        padding: 0;
+        background-color: #000;
+    }
+
+    .navbar-custom.top-nav-collapse {
+        border-bottom: 1px solid rgba(255,255,255,.3);
+    }
 }
 
 .intro {
-	display: table;
-	width: 100%;
-	height: auto;
-	padding: 100px 0;
-	text-align: center;
-	color: #fff;
-	background:
-		url(http://i0.1616.ro/media/441/2681/33749/17427184/1/florin-salam.jpg?width=1200)
-		no-repeat bottom center scroll;
-	background-color: #000;
-	-webkit-background-size: cover;
-	-moz-background-size: cover;
-	background-size: cover;
-	-o-background-size: cover;
+    display: table;
+    width: 100%;
+    height: auto;
+    padding: 100px 0;
+    text-align: center;
+    color: #fff;
+    background: url(https://i.kinja-img.com/gawker-media/image/upload/t_original/hsl7wql2zk0wvqcwqhod.jpg) no-repeat bottom center scroll;
+    background-color: #000;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
 }
 
 .intro-body {
-	display: table-cell;
-	vertical-align: middle;
+    display: table-cell;
+    vertical-align: middle;
 }
 
 .brand-heading {
-	font-size: 40px;
+    font-size: 40px;
 }
 
 .intro-text {
-	font-size: 18px;
+    font-size: 18px;
 }
 
-@media ( min-width :767px) {
-	.intro {
-		height: 100%;
-		padding: 0;
-	}
-	.brand-heading {
-		font-size: 100px;
-	}
-	.intro-text {
-		font-size: 25px;
-	}
+@media(min-width:767px) {
+    .intro {
+        height: 100%;
+        padding: 0;
+    }
+
+    .brand-heading {
+        font-size: 100px;
+    }
+
+    .intro-text {
+        font-size: 25px;
+    }
 }
 
 .btn-circle {
-	width: 70px;
-	height: 70px;
-	margin-top: 15px;
-	padding: 7px 16px;
-	border: 2px solid #fff;
-	border-radius: 35px;
-	font-size: 40px;
-	color: #fff;
-	background: 0 0;
-	-webkit-transition: background .3s ease-in-out;
-	-moz-transition: background .3s ease-in-out;
-	transition: background .3s ease-in-out;
+    width: 70px;
+    height: 70px;
+    margin-top: 15px;
+    padding: 7px 16px;
+    border: 2px solid #fff;
+    border-radius: 35px;
+    font-size: 40px;
+    color: #fff;
+    background: 0 0;
+    -webkit-transition: background .3s ease-in-out;
+    -moz-transition: background .3s ease-in-out;
+    transition: background .3s ease-in-out;
 }
 
-.btn-circle:hover, .btn-circle:focus {
-	outline: 0;
-	color: #fff;
-	background: rgba(255, 255, 255, .1);
+.btn-circle:hover,
+.btn-circle:focus {
+    outline: 0;
+    color: #fff;
+    background: rgba(255,255,255,.1);
 }
 
 .page-scroll .btn-circle i.animated {
-	-webkit-transition-property: -webkit-transform;
-	-webkit-transition-duration: 1s;
-	-moz-transition-property: -moz-transform;
-	-moz-transition-duration: 1s;
+    -webkit-transition-property: -webkit-transform;
+    -webkit-transition-duration: 1s;
+    -moz-transition-property: -moz-transform;
+    -moz-transition-duration: 1s;
 }
 
 .page-scroll .btn-circle:hover i.animated {
-	-webkit-animation-name: pulse;
-	-moz-animation-name: pulse;
-	-webkit-animation-duration: 1.5s;
-	-moz-animation-duration: 1.5s;
-	-webkit-animation-iteration-count: infinite;
-	-moz-animation-iteration-count: infinite;
-	-webkit-animation-timing-function: linear;
-	-moz-animation-timing-function: linear;
+    -webkit-animation-name: pulse;
+    -moz-animation-name: pulse;
+    -webkit-animation-duration: 1.5s;
+    -moz-animation-duration: 1.5s;
+    -webkit-animation-iteration-count: infinite;
+    -moz-animation-iteration-count: infinite;
+    -webkit-animation-timing-function: linear;
+    -moz-animation-timing-function: linear;
 }
 
-@
--webkit-keyframes pulse { 0 {
-	-webkit-transform: scale(1);
-	transform: scale(1);
+@-webkit-keyframes pulse {    
+    0 {
+        -webkit-transform: scale(1);
+        transform: scale(1);
+    }
+
+    50% {
+        -webkit-transform: scale(1.2);
+        transform: scale(1.2);
+    }
+
+    100% {
+        -webkit-transform: scale(1);
+        transform: scale(1);
+    }
 }
 
-50%
-{
--webkit-transform
-:
- 
-scale
-(1
-.2
-);
+@-moz-keyframes pulse {    
+    0 {
+        -moz-transform: scale(1);
+        transform: scale(1);
+    }
 
-        
-transform
-:
- 
-scale
-(1
-.2
-);
+    50% {
+        -moz-transform: scale(1.2);
+        transform: scale(1.2);
+    }
 
-    
-}
-100%
-{
--webkit-transform
-:
- 
-scale
-(1);
-
-        
-transform
-:
- 
-scale
-(1);
-
-    
-}
-}
-@
--moz-keyframes pulse { 0 {
-	-moz-transform: scale(1);
-	transform: scale(1);
+    100% {
+        -moz-transform: scale(1);
+        transform: scale(1);
+    }
 }
 
-50%
-{
--moz-transform
-:
- 
-scale
-(1
-.2
-);
-
-        
-transform
-:
- 
-scale
-(1
-.2
-);
-
-    
-}
-100%
-{
--moz-transform
-:
- 
-scale
-(1);
-
-        
-transform
-:
- 
-scale
-(1);
-
-    
-}
-}
 .content-section {
-	padding-top: 100px;
+    padding-top: 100px;
 }
 
 .download-section {
-	width: 100%;
-	padding: 50px 0;
-	color: #fff;
-	background:
-		url(http://www.livearad.ro/wp-content/uploads/2017/02/nicolae-guta-1.jpg)
-		no-repeat center center scroll;
-	background-color: #000;
-	-webkit-background-size: cover;
-	-moz-background-size: cover;
-	background-size: cover;
-	-o-background-size: cover;
+    width: 100%;
+    padding: 50px 0;
+    color: #fff;
+    background: url(http://www.livearad.ro/wp-content/uploads/2017/02/nicolae-guta-1.jpg) no-repeat center center scroll;
+    background-color: #000;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
 }
 
 #map {
-	width: 100%;
-	height: 200px;
-	margin-top: 100px;
+    width: 100%;
+    height: 200px;
+    margin-top: 100px;
 }
 
-@media ( min-width :767px) {
-	.content-section {
-		padding-top: 250px;
-	}
-	.download-section {
-		padding: 100px 0;
-	}
-	#map {
-		height: 400px;
-		margin-top: 250px;
-	}
+@media(min-width:767px) {
+    .content-section {
+        padding-top: 250px;
+    }
+
+    .download-section {
+        padding: 100px 0;
+    }
+
+    #map {
+        height: 400px;
+        margin-top: 250px;
+    }
 }
 
 .btn {
-	text-transform: uppercase;
-	font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
-	font-weight: 400;
-	-webkit-transition: all .3s ease-in-out;
-	-moz-transition: all .3s ease-in-out;
-	transition: all .3s ease-in-out;
+    text-transform: uppercase;
+    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-weight: 400;
+    -webkit-transition: all .3s ease-in-out;
+    -moz-transition: all .3s ease-in-out;
+    transition: all .3s ease-in-out;
 }
 
 .btn-default {
-	border: 1px solid #28c3ab;
-	color: #28c3ab;
-	background-color: transparent;
+    border: 1px solid #28c3ab;
+    color: #28c3ab;
+    background-color: transparent;
 }
 
-.btn-default:hover, .btn-default:focus {
-	border: 1px solid #28c3ab;
-	outline: 0;
-	color: #000;
-	background-color: #28c3ab;
+.btn-default:hover,
+.btn-default:focus {
+    border: 1px solid #28c3ab;
+    outline: 0;
+    color: #000;
+    background-color: #28c3ab;
 }
 
 .btn-huge {
-	padding: 25px;
-	font-size: 26px;
+    padding: 25px;
+    font-size: 26px;
 }
 
 .banner-social-buttons {
-	margin-top: 0;
+    margin-top: 0;
 }
 
-@media ( max-width :1199px) {
-	ul.banner-social-buttons {
-		margin-top: 15px;
-	}
+@media(max-width:1199px) {
+    ul.banner-social-buttons {
+        margin-top: 15px;
+    }
 }
 
-@media ( max-width :767px) {
-	ul.banner-social-buttons>li {
-		display: block;
-		margin-bottom: 20px;
-		padding: 0;
-	}
-	ul.banner-social-buttons>li:last-child {
-		margin-bottom: 0;
-	}
+@media(max-width:767px) {
+    ul.banner-social-buttons>li {
+        display: block;
+        margin-bottom: 20px;
+        padding: 0;
+    }
+
+    ul.banner-social-buttons>li:last-child {
+        margin-bottom: 0;
+    }
 }
 
 ::-moz-selection {
-	text-shadow: none;
-	background: #fcfcfc;
-	background: rgba(255, 255, 255, .2);
+    text-shadow: none;
+    background: #fcfcfc;
+    background: rgba(255,255,255,.2);
 }
 
 ::selection {
-	text-shadow: none;
-	background: #fcfcfc;
-	background: rgba(255, 255, 255, .2);
+    text-shadow: none;
+    background: #fcfcfc;
+    background: rgba(255,255,255,.2);
 }
 
 img::selection {
-	background: 0 0;
+    background: 0 0;
 }
 
 img::-moz-selection {
-	background: 0 0;
+    background: 0 0;
 }
 
 body {
-	webkit-tap-highlight-color: rgba(255, 255, 255, .2);
+    webkit-tap-highlight-color: rgba(255,255,255,.2);
 }
 
 footer {
 	background-color: #f8f8f8;
-	padding: 10px 0;
+	padding: 50px 0;
+}
+
+/*	--------------------------------------------------
+	:: Table Filter
+	-------------------------------------------------- */
+.panel {
+	border: 1px solid #ddd;
+	background-color: #fcfcfc;
+	color: #353535;
+}
+.panel .btn-group {
+	margin: 15px 0 30px;
+}
+.panel .btn-group .btn {
+	transition: background-color .3s ease;
+}
+.table-filter {
+	background-color: #fff;
+	border-bottom: 1px solid #eee;
+}
+.table-filter tbody tr:hover {
+	cursor: pointer;
+	background-color: #eee;
+}
+.table-filter tbody tr td {
+	padding: 10px;
+	vertical-align: middle;
+	border-top-color: #eee;
+}
+.table-filter tbody tr.selected td {
+	background-color: #eee;
+}
+.table-filter tr td:first-child {
+	width: 38px;
+}
+.table-filter tr td:nth-child(2) {
+	width: 35px;
+}
+.ckbox {
+	position: relative;
+}
+.ckbox input[type="checkbox"] {
+	opacity: 0;
+}
+.ckbox label {
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+}
+.ckbox label:before {
+	content: '';
+	top: 1px;
+	left: 0;
+	width: 18px;
+	height: 18px;
+	display: block;
+	position: absolute;
+	border-radius: 2px;
+	border: 1px solid #bbb;
+	background-color: #fff;
+}
+.ckbox input[type="checkbox"]:checked + label:before {
+	border-color: #2BBCDE;
+	background-color: #2BBCDE;
+}
+.ckbox input[type="checkbox"]:checked + label:after {
+	top: 3px;
+	left: 3.5px;
+	content: '\e013';
+	color: #fff;
+	font-size: 11px;
+	font-family: 'Glyphicons Halflings';
+	position: absolute;
+}
+.table-filter .star {
+	color: #ccc;
+	text-align: center;
+	display: block;
+}
+.table-filter .star.star-checked {
+	color: #F0AD4E;
+}
+.table-filter .star:hover {
+	color: #ccc;
+}
+.table-filter .star.star-checked:hover {
+	color: #F0AD4E;
+}
+.table-filter .media-photo {
+	width: 35px;
+}
+.table-filter .media-body {
+    display: block;
+    /* Had to use this style to force the div to expand (wasn't necessary with my bootstrap version 3.3.6) */
+}
+.table-filter .media-meta {
+	font-size: 11px;
+	color: #999;
+}
+.table-filter .media .title {
+	color: #2BBCDE;
+	font-size: 14px;
+	font-weight: bold;
+	line-height: normal;
+	margin: 0;
+}
+.table-filter .media .title span {
+	font-size: .8em;
+	margin-right: 20px;
+}
+.table-filter .media .title span.pagado {
+	color: #5cb85c;
+}
+.table-filter .media .title span.pendiente {
+	color: #f0ad4e;
+}
+.table-filter .media .title span.cancelado {
+	color: #d9534f;
+}
+.table-filter .media .summary {
+	font-size: 14px;
 }
