--- a/Frontend/src/main/webapp/assets/css/myapp.css
+++ b/Frontend/src/main/webapp/assets/css/myapp.css
@@ -462,13 +462,13 @@ footer {
 	font-size: .8em;
 	margin-right: 20px;
 }
-.table-filter .media .title span.pagado {
+.table-filter .media .title span.Natural_Disaster {
 	color: #5cb85c;
 }
-.table-filter .media .title span.pendiente {
+.table-filter .media .title span.Terrorist_Act {
 	color: #f0ad4e;
 }
-.table-filter .media .title span.cancelado {
+.table-filter .media .title span.Accident {
 	color: #d9534f;
 }
 .table-filter .media .summary {
