--- a/Frontend/src/main/webapp/assets/css/greyscale.css
+++ b/Frontend/src/main/webapp/assets/css/greyscale.css
@@ -1,4 +1,4 @@
-\body {
+body {
     width: 100%;
     height: 100%;
     font-family: Lora,"Helvetica Neue",Helvetica,Arial,sans-serif;
@@ -127,7 +127,7 @@ a:focus {
     padding: 100px 0;
     text-align: center;
     color: #fff;
-    background: url(https://myembrace.empatica.com/release_20171214_1502/app/img/alert/alert-web-artwork.3.0.3.jpg) no-repeat bottom center scroll;
+    background: url(https://cdn.forbes.com.mx/2017/08/mapaterrorismo.png) no-repeat bottom center scroll;
     background-color: #000;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -244,8 +244,8 @@ a:focus {
 .download-section {
     width: 100%;
     padding: 50px 0;
-    color: #fff;
-    background: url(http://www.livearad.ro/wp-content/uploads/2017/02/nicolae-guta-1.jpg) no-repeat center center scroll;
+    color: #000000;
+    background: url(https://images.contentful.com/3cttzl4i3k1h/4SkqedHq9WgucoKq2UyWo/8324c0d476f174da7f5412af1c7834c7/rfp.png?w=1400&h=600&q=80&fm=&f=&fit=fill) no-repeat center center scroll;
     background-color: #000;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -348,14 +348,13 @@ body {
     webkit-tap-highlight-color: rgba(255,255,255,.2);
 }
 
-footer {
-	background-color: #f8f8f8;
-	padding: 50px 0;
-}
 
 /*	--------------------------------------------------
 	:: Table Filter
 	-------------------------------------------------- */
+table{
+	width: 500px;
+}
 .panel {
 	border: 1px solid #ddd;
 	background-color: #fcfcfc;
@@ -441,7 +440,7 @@ footer {
 	color: #F0AD4E;
 }
 .table-filter .media-photo {
-	width: 35px;
+	width: 50px;
 }
 .table-filter .media-body {
     display: block;
@@ -473,4 +472,9 @@ footer {
 }
 .table-filter .media .summary {
 	font-size: 14px;
+	margin: 0 !important;
+}
+.table-filter .media .userName {
+	font-size: 10px;
+	margin: 0 !important;
 }
